fixed pdf stretching in mobile view

--- a/journalwebsite/styles/Article.module.css
+++ b/journalwebsite/styles/Article.module.css
@@ -16,6 +16,11 @@
   border-radius: 5px;
   margin-top: 10px;
   margin-bottom: 5px;
+  cursor: pointer;
+}
+
+.container h1 {
+  cursor: pointer;
 }
 
 /* .container h1 {
