--- a/journalwebsite/styles/Read.module.css
+++ b/journalwebsite/styles/Read.module.css
@@ -7,12 +7,12 @@
 
 .page hr {
   margin-top: 1%;
-  margin-bottom: 1%;
+  margin-bottom: 30px;
   border: 0;
   border-top: 1px solid #eee;
 }
 .page {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   margin-bottom: 20px;
   overflow-y: visible;
 }
@@ -24,35 +24,13 @@
   width: 30vw;
   display: flex;
   flex-direction: column;
-  padding: 10px 25px;
-  /* box-shadow: -5px 0px 8px -3px #fd7e14, 5px 0px 8px -3px #fd7e14; */
-}
-
-.commentcontainer::before {
-  content: "";
-  position: absolute;
-  right: 50%;
-  top: 50%;
-  transform: translate(50%, -50%);
-  width: 100%;
-  height: 80%;
-  background-color: #fd7e14;
-  filter: blur(5px);
-  -webkit-filter: blur(5px);
-  z-index: -3;
-}
-
-.commentcontainer::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  right: 50%;
-  top: 50%;
-  transform: translate(50%, -50%);
-  background-color: #1b181b;
-  z-index: -1;
+  padding: 20px 25px;
   border-radius: 5px;
+  box-shadow: -5px 0px 3px -1px #fd7e14, 5px 0px 3px -1px #fd7e14;
+}
+
+.commentcontainer h3 {
+  margin-bottom: 20px;
 }
 
 .comment {
@@ -122,19 +100,10 @@
   margin-top: 5px;
 }
 
-/* .commentcontainer textarea::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  background-color: white;
-  top: 0px;
-} */
-
 .addcomment {
   position: absolute;
   right: 0;
-  bottom: 6px;
+  bottom: 16px;
   background: transparent;
 }
 .commentviewbutton {
@@ -143,6 +112,7 @@
 .commentopenbutton {
   display: none;
 }
+
 @media screen and (max-width: 768px) {
   .commentviewbutton {
     display: block;
@@ -155,8 +125,9 @@
   }
   .commentcontainer {
     width: 90vw;
+    height: 90vh;
     position: fixed;
-    top: 10%;
+    top: 60px;
     left: 50%;
     transform: translateX(-50%);
   }
