--- a/journalwebsite/styles/globals.css
+++ b/journalwebsite/styles/globals.css
@@ -169,7 +169,7 @@ footer {
 @media (max-width: 768px) {
   html,
   body {
-    padding: 50px 15px 20px 15px;
+    padding: 40px 15px 20px 50px;
   }
 }
 
